[package]
name = "pipeweaver-midi"
version = "0.1.0"
edition = "2024"

[dependencies]
pipeweaver-ipc = { git = "https://github.com/pipeweaver/pipeweaver", tag = "v0.1.6" }
pipeweaver-shared = { git = "https://github.com/pipeweaver/pipeweaver", tag = "v0.1.6" }
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
interprocess = "2.4.0"
anyhow = "1.0.102"
directories = "6.0.0"
